--- a/packages/ui/src/styles/_keyframe-animations.scss
+++ b/packages/ui/src/styles/_keyframe-animations.scss
@@ -89,3 +89,21 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes infinite-scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes infinite-scroll-reverse {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
